@@ -1,3 +1,15 @@
+2012-11-15  Dana Jansens  <danakj@chromium.org>
+
+        [chromium] Stop using the WebCompositorSupport methods for changing settings
+        https://bugs.webkit.org/show_bug.cgi?id=101968
+
+        Reviewed by James Robinson.
+
+        * DumpRenderTree/chromium/TestShell.cpp:
+        * DumpRenderTree/chromium/TestShell.h:
+        (TestShell::setPerTilePaintingEnabled):
+        (TestShell::setAcceleratedAnimationEnabled):
+
 2012-11-15  Tony Chang  <tony@chromium.org>
 
         Generate Settings from a .in file
